<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="30dp"
    android:layout_height="100dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Offer1Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/RedeemId"
                android:layout_alignParentStart="true"
                android:text="@string/_2_for_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
            </TextView>

            <Button
                android:id="@+id/RedeemId"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/redeem_button"
                android:text="@string/redeem"
                android:textColor="#FFFFFF"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
            </Button>

        </RelativeLayout>

        <TextView
            android:id="@+id/CardViewBodyId"
            android:text="@string/body"
            android:maxLines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EstimatedSavingsId"
                android:text="@string/estimated_savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/ValueId"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/EstimatedSavingsId"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
            </TextView>

            <TextView
                android:id="@+id/ValidityId"
                android:text="@string/validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/timeId"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:ignore="RelativeOverlap">
            </TextView>

            <TextView
                android:id="@+id/timeId"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
            </TextView>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>