<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_marginTop="125dp"
            android:contentDescription="@string/imageView"
            android:id="@+id/DetailsImageId"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/DescriptionsId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/descriptions"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:text="@string/body"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>