<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.OffersFragment">

    <RelativeLayout
        android:id="@+id/RelativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.viewpager.widget.ViewPager
            android:layout_marginTop="75dp"
            android:id="@+id/ViewPagerId"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <LinearLayout
            android:id="@+id/SliderDotsId"
            android:layout_below="@+id/ViewPagerId"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayoutId"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@id/SliderDotsId"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/my_button"
                android:contentDescription="@string/imageButton"
                android:drawableStart="@drawable/ic_location"
                android:padding="10dp"
                android:text="@string/map"
                android:textColor="#330867"
                app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="57dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/my_button"
                android:contentDescription="@string/imageButton"
                android:drawableStart="@drawable/ic_call"
                android:padding="10dp"
                android:text="@string/call"
                android:textColor="#330867"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="57dp"
                android:background="@drawable/my_button"
                android:contentDescription="@string/imageButton"
                android:drawableStart="@drawable/ic_menu"
                android:padding="10dp"
                android:text="@string/menu"
                android:textColor="#330867"
                app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_below="@id/ConstraintLayoutId"
            android:orientation="vertical">

            <include layout="@layout/card_view_offer" />

            <include layout="@layout/card_view_discount" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>